examples/test/testpolicy10312.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10312
  namespace: namespace424
spec:
  podSelector:
    matchLabels:
      key14: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value15
          key6: value41
          key37: value25
      podSelector:
        matchLabels:
          key14: value29
